# Minesweeper19

./: .gitignore  README.md
Arduino/Arm/: Arm.ino
Arduino/Controller/: Controller.ino
Arduino/Controller_IBS/: Controller_IBS.ino
Arduino/Controller_Monster/: Controller_Monster.ino
Arduino/Controller_V2.0/: Controller_V2.0.ino
Arduino/MPU6050/: MPU6050.ino  Offsets
Arduino/mega_main/: mega_main.ino
Arduino/metal_marker/: metal_marker1.ino
Arduino/mine_detect/: mine_detect.ino
Controller/: Controller.ino
libs/HBridge/: .HBridge.cpp.swn  .HBridge.cpp.swo  HBridge.cpp  HBridge.h
libs/HBridge_Monster/: .HBridge_Monster.cpp.swk  .HBridge_Monster.cpp.swl  .HBridge_Monster.cpp.swm  .HBridge_Monster.cpp.swn  .HBridge_Monster.cpp.swo  HBridge_Monster.cpp  HBridge_Monster.h
libs/JoyControl/: JoyControl.cpp  JoyControl.h
libs/JoyControl_Monster/: JoyControl_Monster.cpp  JoyControl_Monster.h
libs/Joy_Ps4_Arm/: .Joy_Arm.cpp.swi  .Joy_Arm.cpp.swj  .Joy_Arm.cpp.swk  .Joy_Arm.cpp.swl  .Joy_Arm.cpp.swm  .Joy_Arm.cpp.swn  .Joy_Arm.cpp.swo  Joy_Arm.cpp  Joy_Arm.h
libs/MetalDetector/: MetalDetector.cpp  MetalDetector.h
libs/NewPing/: keywords.txt
libs/Stepper/: Stepper_CNC.cpp  Stepper_CNC.h
libs/Ultrasonic/: Ultrasonic.cpp  Ultrasonic.h
libs/joy_ps4/: joy_ps4.cpp  joy_ps4.h
libs/joy_ps4_IBS/: .joy_ps4_new.cpp.swn  .joy_ps4_new.cpp.swo  joy_ps4_IBS.cpp
libs/joy_ps4_Monster/: .joy_ps4.cpp.swn  joy_ps4_Monster.cpp
minesweeper_ws/src/joypkg/: CMakeLists.txt  package.xml
minesweeper_ws/src/joypkg/scripts/: JoyControl.py
(+39 files in other folders)
